# ScheduleFlow

./: .gitignore  README.md  docker-compose.example.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/application/: dtos.py  use_cases.py
backend/application/dtos/: admin_appointment_summary_dto.py  admin_login_request.py  admin_login_response.py  appointment_summary_dto.py  book_appointment_request.py  book_appointment_response.py  cancel_appointment_request.py  cancel_appointment_response.py  get_appointment_details_request.py  get_appointment_details_response.py  get_availability_request.py  get_availability_response.py  list_all_appointments_request.py  list_all_appointments_response.py  list_my_appointments_response.py  login_response.py  register_service_request.py  register_service_response.py  register_user_request.py  register_user_response.py  service_summary_dto.py  service_types_response.py  time_slot_dto.py
backend/application/interfaces/: repositories.py
backend/application/use_cases/: admin_login_use_case.py  book_appointment_use_case.py  cancel_appointment_use_case.py  get_appointment_details_use_case.py  get_availability_use_case.py  list_all_appointments_use_case.py  list_my_appointments_use_case.py  login_use_case.py  register_service_use_case.py  register_user_use_case.py
backend/core/: models.py  value_objects.py
backend/core/models/: appointment.py  appointment_status.py  service.py  service_type.py  user.py
backend/interfaces/: dependencies.py  main.py
backend/tests/: conftest.py
(+46 files in other folders)
