[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduleflow-backend"
version = "0.1.0"
description = "ScheduleFlow backend API"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]

include = ["backend", "backend.*"]

[tool.setuptools.package-dir]
"backend" = "."